--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,38 +1,5 @@
-<!-- <header class='flex-container flex-center'>
-    <div class='width-25'></div>
-    <div class="width-half">
-        <label for="search">
-            <i class='fa fa-search icon-pos color-purple'></i>
-        </label>
-        <form [formGroup]='stateForm' autocomplete="new-password" novalidate>
-            <input id='search' placeholder="Search for a state" formControlName='search' (click)=' openDropDown() ' class=' input-underline search-bar ' type='text'>
-        </form>
-        <div clickOutside (clickOutside)="closeDropDown()">
-            <div *ngIf='showDropDown' class='search-drop-down '>
-                <div (click)='selectValue(s)' class='search-results ' *ngFor="let s of states | searchFilter: getSearchValue()">
-                    <a [innerHTML]="s | letterBold: getSearchValue()">
-                           {{s}}
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class='width-25 '></div>
-</header>
-<main>
-    <div class='flex-container card-container flex-wrap flex-center '>
-        <div class='flex-container card-dimensions card flex-center width-100 ' *ngFor='let s of states | searchFilter: getSearchValue()'>
-            <div class='width-5 '></div>
-            {{s}}
-            <div class='width-5 '></div>
-        </div>
-    </div>
-</main>
-<footer>
-</footer> -->
-
-
-<h1>Search color</h1>
-            <ng2-completer [(ngModel)]="searchStr" [datasource]="dataService" [minSearchLength]="0"></ng2-completer>
-            <h1>Search captain</h1>
-            <ng2-completer [(ngModel)]="captain" [datasource]="captains" [minSearchLength]="0"></ng2-completer>
+<div class="form-group">
+    <label for="search">Core skills</label>
+    <input type="text" class="form-control" id="search" [(ngModel)]="input" name="search">
+    <button class="btn btn-primary" (click)="search()">Search</button>
+</div>
