--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="form-group">
     <label for="search">Core skills</label>
     <input type="text" class="form-control" id="search" [(ngModel)]="input" name="search">
-    <button class="btn btn-primary" (click)="search()">Search</button>
+    <button class="btn btn-primary" (click)="searchJob()">Search</button>
 </div>
