--- a/src/app/job-posting/job-posting.component.html
+++ b/src/app/job-posting/job-posting.component.html
@@ -8,7 +8,7 @@
 
 <form id="form" class="col-4">
     <div class="form-group">
-      <label for="jobRole>Job role</label>
+      <label for="jobRole">Job role</label>
       <input type="text" class="form-control" id="jobRole" [(ngModel)]="jobRole" name="jobRole" required>
     </div>
     <div class="form-group">
