--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,11 @@
-<div class="form-group">
-    <label for="search">Core skills</label>
-    <input type="text" class="form-control" id="search" [(ngModel)]="input" name="search">
-    <button class="btn btn-primary" (click)="searchJob()">Search</button>
-</div>
+<p>Prevents manual text entry and updates the model only when an item from suggestions is selected</p>
+
+<label for="typeahead-prevent-manual-entry">Search for a state:</label>
+<input id="typeahead-prevent-manual-entry"  type="text" class="form-control"
+       [(ngModel)]="model"
+       [ngbTypeahead]="search"
+       [inputFormatter]="formatter"
+       [resultFormatter]="formatter"
+       [editable]='false' />
+<hr>
+<pre>Model: {{ model | json }}</pre>
