--- a/src/app/job-posting/job-posting.component.html
+++ b/src/app/job-posting/job-posting.component.html
@@ -24,23 +24,23 @@
         <input type="text" class="form-control" id="company" [(ngModel)]="company" name="company" required>
       </div>
       <div class="form-group">
-        <label for="coreSkill1">Core skills</label>
+        <label>Core skills</label>
         <input type="text" class="form-control" id="coreSkill1" [(ngModel)]="coreSkill1" name="coreSkill1" required>
 
-        <label for="coreSkill2">Core skills</label>
+        <!-- <label for="coreSkill2">Core skills</label> -->
         <input type="text" class="form-control" id="coreSkill2" [(ngModel)]="coreSkill2" name="coreSkill2" required>
 
-        <label for="coreSkill3">Core skills</label>
+        <!-- <label for="coreSkill3">Core skills</label> -->
         <input type="text" class="form-control" id="coreSkill3" [(ngModel)]="coreSkill3" name="coreSkill3" required>
       </div>
       <div class="form-group">
-        <label for="softSkill1">Soft skills</label>
+        <labe></labe>>Soft skills</label>
         <input type="text" class="form-control" id="softSkill1" [(ngModel)]="softSkill1" name="softSkill1" required>
 
-        <label for="softSkill2">Soft skills</label>
+        <!-- <label for="softSkill2">Soft skills</label> -->
         <input type="text" class="form-control" id="softSkill2" [(ngModel)]="softSkill2" name="softSkill2" required>
 
-        <label for="softSkill3">Soft skills</label>
+        <!-- <label for="softSkill3">Soft skills</label> -->
         <input type="text" class="form-control" id="softSkill3" [(ngModel)]="softSkill3" name="softSkill3" required>
       </div>
       <div class="form-group">
