--- a/src/app/job-posting/job-posting.component.html
+++ b/src/app/job-posting/job-posting.component.html
@@ -34,7 +34,7 @@
         <input type="text" class="form-control" id="coreSkill3" [(ngModel)]="coreSkill3" name="coreSkill3" required>
       </div>
       <div class="form-group">
-        <labe></labe>>Soft skills</label>
+        <labe>Soft skills</label>
         <input type="text" class="form-control" id="softSkill1" [(ngModel)]="softSkill1" name="softSkill1" required>
 
         <!-- <label for="softSkill2">Soft skills</label> -->
