--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-link" routerLink="sign-in">Sign In</a>
+      <a class="nav-link" routerLink="sign-up">Sign Up</a>
       <a class="nav-link" routerLink="job-posting">Post a Job</a>
       <a class="nav-link" routerLink="expert-support">Expert Support</a>
     </div>
