--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -44,11 +44,11 @@
 				<input type="text" class="form-control" name="confirm_password" placeholder="Confirm Password" required="required">
 			</div>
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
 			<label class="form-check-label"><input type="checkbox" required="required"> I accept the <a href="#">Terms of Use</a> &amp; <a href="#">Privacy Policy</a></label>
-		</div>
+		</div> -->
 		<div class="form-group">
-            <button type="submit" class="btn btn-primary btn-lg">Sign Up</button>
+            <button type="submit" class="btn btn-primary btn-lg" (click)="signUp()">Sign Up</button>
         </div>
     </form>
 	<div class="text-center">Already have an account? <a href="#">Login here</a></div>
