--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <p>Prevents manual text entry and updates the model only when an item from suggestions is selected</p>
 
 <label for="typeahead-prevent-manual-entry">Search for a state:</label>
-<input id="typeahead-prevent-manual-entry"  type="text" class="form-control"
+<input id="typeahead-prevent-manual-entry"  placeholder="Search using skills, locations and job roles..." type="text" class="form-control"
        [(ngModel)]="model"
        [ngbTypeahead]="search"
        [inputFormatter]="formatter"
