--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
 <hr>
 <pre>Model: {{ model | json }}</pre>
 
-<ul>
+<!-- <ul>
     <li *ngFor = "let job of joblist">
         Job Role : <div>{{job.jobRole}}</div> 
         Function : <div>{{job.function}}</div>
@@ -21,8 +21,8 @@
         Location : <div>{{job.location}}</div>
         Pin : <div>{{job.pin}}</div>
         Compensation : <div>{{job.compensation}}</div>
-<!-- 
+
         <span *ngIf="(job.status)">Active</span>
-        <span *ngIf="!(job.status)">Inactive</span> -->
+        <span *ngIf="!(job.status)">Inactive</span> 
     </li>
-</ul>
+</ul> -->
