--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,6 +7,7 @@
        [inputFormatter]="formatter"
        [resultFormatter]="formatter"
        [editable]='false' />
+<button type="submit" class="btn btn-primary btn-lg" (click)="searchJob()">Search</button>
 <hr>
 <pre>Model: {{ model | json }}</pre>
 
