--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
 <hr>
 <pre>Model: {{ model | json }}</pre>
 
-<!-- <ul>
+<ul *ngIf="showJobs">
     <li *ngFor = "let job of joblist">
         Job Role : <div>{{job.jobRole}}</div> 
         Function : <div>{{job.function}}</div>
@@ -26,4 +26,4 @@
         <span *ngIf="(job.status)">Active</span>
         <span *ngIf="!(job.status)">Inactive</span> 
     </li>
-</ul> -->
+</ul>
