--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -49,3 +49,13 @@
 .color-purple {
     color: #A550BC;
 }
+
+li{
+    list-style: none;
+}
+
+ul{
+    border: 1px solid grey;
+    padding: 8px;
+    margin: 15px;
+}
