--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<p>Prevents manual text entry and updates the model only when an item from suggestions is selected</p>
+<p>Search for a skill, location or job role. For example: Javascript, Mumbai, or Fullstack developer</p>
 
-<label for="typeahead-prevent-manual-entry">Search for a state:</label>
+<label for="typeahead-prevent-manual-entry">Search for a skill, location or job role:</label>
 <input id="typeahead-prevent-manual-entry"  placeholder="Search using skills, locations and job roles..." type="text" class="form-control"
        [(ngModel)]="model"
        [ngbTypeahead]="search"
@@ -9,21 +9,40 @@
        [editable]='false' />
 <button type="submit" class="btn btn-primary btn-lg" (click)="searchJob()">Search</button>
 <hr>
-<pre>Model: {{ model | json }}</pre>
+<!-- <pre>Model: {{ model | json }}</pre> -->
 
 <ul *ngIf="showJobs">
     <li *ngFor = "let job of joblist">
-        Job Role : <div>{{job.jobRole}}</div> 
-        Function : <div>{{job.function}}</div>
-        Sub Function: <div>{{job.subFunction}}</div>
-        Company : <div>{{job.company}}</div>
-        Core skills : <div>{{job.coreSkills}}</div>
-        Soft skills : <div>{{job.softSkills}}</div>
-        Location : <div>{{job.location}}</div>
-        Pin : <div>{{job.pin}}</div>
-        Compensation : <div>{{job.compensation}}</div>
-
-        <span *ngIf="(job.status)">Active</span>
-        <span *ngIf="!(job.status)">Inactive</span> 
+        <div> 
+            Job Role : <span>{{job.jobRole}}</span> 
+        </div>
+        <div>
+        Function : <span>{{job.function}}</span>
+        </div>
+        <div>
+        Sub Function: <span>{{job.subFunction}}</span>
+        </div>
+        <div>
+        Company : <span>{{job.company}}</span>
+        </div>
+        <div>
+        Core skills : <span>{{job.coreSkills}}</span>
+        </div>
+        <div>
+        Soft skills : <span>{{job.softSkills}}</span>
+        </div>
+        <div>
+        Location : <span>{{job.location}}</span>
+        </div>
+        <div>
+        Pin : <span>{{job.pin}}</span>
+        </div>
+        <div>
+        Compensation : <span>{{job.compensation}}</span>
+        </div>
+        <div>
+            Job description : <span>{{job.jd}}</span>
+        </div>
+        <button class="btn btn-primary" >Apply</button>
     </li>
 </ul>
