--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -51,5 +51,5 @@
             <button type="submit" class="btn btn-primary btn-lg" (click)="signUp()">Sign Up</button>
         </div>
     </form>
-	<div class="text-center">Already have an account? <a href="#">Login here</a></div>
+	<div class="text-center">Already have an account? <a>Login here</a></div>
 </div>
